[package]
name = "rust-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dotenv = "0.15.0"
hex = "0.4.3"
num-bigint = "0.4.4"
num-traits = "0.2.18"
redis = "0.25.3"
rocksdb = "0.22.0"
scrypt = "0.8"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
sha2 = "0.10.8"
